test/Fail/UselessPrivateImportAs.agda
{-# OPTIONS --warning=error #-}

module UselessPrivateImportAs where

private
  import Common.Prelude as P
